--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -1,42 +1,30 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-# This workflow will install Deno then run `deno lint` and `deno test`.
-# For more information see: https://github.com/denoland/setup-deno
-
-name: Deno
+name: Deno Deploy
 
 on:
   push:
-    branches: ["master"]
-  pull_request:
-    branches: ["master"]
-
-permissions:
-  contents: read
+    branches:
+      - master
 
 jobs:
-  test:
+  deploy:
+    name: Deploy to Deno Deploy
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write # Needed for auth with Deno Deploy
+      contents: read # Needed to clone the repository
 
     steps:
-      - name: Setup repo
+      - name: Checkout code
         uses: actions/checkout@v3
-
-      - name: Setup Deno
-        # uses: denoland/setup-deno@v1
-        uses: denoland/setup-deno@9db7f66e8e16b5699a514448ce994936c63f0d54
+      
+      - name: Install dependencies
+        run: npm install
+      
+      - name: Build application
+        run: npm run build
+      
+      - name: Upload to Deno Deploy
+        uses: denoland/deployctl@v1
         with:
-          deno-version: v1.x
-
-      # Uncomment this step to verify the use of 'deno fmt' on each commit.
-      # - name: Verify formatting
-      #   run: deno fmt --check
-
-#       - name: Run linter
-#         run: deno lint
-
-      - name: Run tests
-        run: deno test -A
+          project: "bargpt"
+          entrypoint: "./src/index.ts"
